Replace HttpURLConnection with java.net.http.HttpClient for native PATCH support
HttpURLConnection does not support PATCH and reflection is blocked by
Java 17 module system. Switched to java.net.http.HttpClient (built into
Java 11+) which supports PATCH natively. This fixes all update operations:
unban, unmute, unwarn, unbanip, close reports, update player IP, etc.